force-app/main/default/objects/SQX_Part__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>his field is used to store the Product Value</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parts</relationshipLabel>
    <relationshipName>SQX_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>